--- a/route/package.json
+++ b/route/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsapp",
+  "name": "route",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss7-compat": "^2.1.0",
-    "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
-    "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
