--- a/Collect/bitfumes/vue3/package.json
+++ b/Collect/bitfumes/vue3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new",
+  "name": "vue3",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,22 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.1.0",
+    "@tensorflow/tfjs-backend-cpu": "^2.4.0",
+    "@tensorflow/tfjs-backend-webgl": "^2.4.0",
+    "@tensorflow/tfjs-converter": "^2.4.0",
+    "@tensorflow/tfjs-core": "^2.4.0",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
-    "vue-router": "4"
+    "firebase": "^7.22.0",
+    "marked": "^1.2.0",
+    "tailwindcss": "^1.8.10",
+    "vue": "^3.0.0-0",
+    "vue-router": "^4.0.0-beta.13",
+    "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "^3.1.1",
-    "@vue/cli-service": "^3.12.1",
-    "@vue/compiler-sfc": "^3.0.0",
-    "autoprefixer": "^9.8.7",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0-0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0",
-    "node-sass": "^6.0.1",
-    "postcss": "^7.0.38",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
+    "eslint-plugin-vue": "^7.0.0-0"
   },
   "eslintConfig": {
     "root": true,
